add div for display onetask

--- a/src/template.html
+++ b/src/template.html
@@ -8,13 +8,14 @@
 </head>
 <body>
   <div class="container-total" id="conatinerTotal">
+    <div id="task-inv" class="invisible"></div>
     <h1 class="title-webp">To-do</h1>
     <p id="titlesPro" class="cont-titlesp">My Projects</p>
     <div id="titlesTask" class="cont-titlest">
       <p>My Tasks</p>
     </div>
-    <div id="my-projects" class="container-projet"></div>
-    <div id="cont">
+    <div id="my-projects" class="container-project"></div>
+    <div id="cont" class="container-task">
     </div>
     <div id="addProj" class="cont-newProject"></div>
   </div>  
